fix(sticky): remove overflow hidden on main container

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,7 +29,6 @@ main {
   position: relative;
   max-width: 1024px;
   margin: 0 auto;
-  overflow: hidden;
 }
 
 section {
